--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -17,15 +17,37 @@
     text-decoration: none;
     border: none;
     font-size: 15px;
-    border-radius: 10px;
+    border-radius: 15px;
     min-height: 35px;
     min-width: 120px;
     margin-top: 20px;
     margin-bottom: 20px;
     margin-left: 10px;
     background-color: #000;
+    float: left;
 }
 
+.formcontrol {
+    float: right;
+    font-size: 15px;
+    border-radius: 15px;
+    min-height: 30px;
+    min-width: 120px;
+    margin-top: 25px;
+    margin-bottom: 20px;
+    margin-left: 10px;
+}
+
+.inputformcontrol {
+    float: right;
+    font-size: 15px;
+    border-radius: 15px;
+    min-height: 30px;
+    min-width: 120px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    margin-left: 10px;
+}
 
 #mainscreenheader {
     margin-left: 35px;
@@ -71,3 +93,4 @@
     margin-bottom: 20px;
     background-color: darkred;
 }
+
