--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -12,6 +12,14 @@
     overflow: hidden;
 }
 
+.maincontain {
+    min-height: 35px;
+    min-width: 120px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 10px;
+}
+
 .pagebtns {
     color: #fff;
     text-decoration: none;
@@ -23,7 +31,6 @@
     margin-top: 20px;
     margin-bottom: 20px;
     margin-left: 10px;
-    background-color: #000;
     float: left;
 }
 
@@ -33,9 +40,10 @@
     border-radius: 15px;
     min-height: 30px;
     min-width: 120px;
-    margin-top: 25px;
+    margin-top: 30px;
     margin-bottom: 20px;
     margin-left: 10px;
+    float: right;
 }
 
 .inputformcontrol {
@@ -48,6 +56,12 @@
     margin-bottom: 20px;
     margin-left: 10px;
 }
+
+#filterform {
+    float: right;
+    min-width: 130px;
+}
+
 
 #mainscreenheader {
     margin-left: 35px;
